--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@delphi/telphi-sdk",
+  "name": "@kefir266/telphi-sdk",
   "version": "0.1.0",
   "private": false,
   "type": "module",
@@ -21,12 +21,12 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@delphi/validation": "workspace:^0.1.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "7.3.8",
     "@mui/material": "7.3.8",
     "@mui/system": "7.3.8",
+    "zod": "^4.3.6",
     "zustand": "^5.0.11"
   },
   "peerDependencies": {
