--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "@delphi/tsconfig/base.json",
   "compilerOptions": {
-    "tsBuildInfoFile": "node_modules/.cache/tsbuildinfo.json"
+    "tsBuildInfoFile": "node_modules/.cache/tsbuildinfo.json",
+    "jsx": "react-jsx"
   },
   "include": ["src", "../../apps/telweb/src/components/WebRTC/hooks/useBrowserAction.tsx"],
   "exclude": ["node_modules"]
